--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,38 +1,37 @@
 header {
-    .container  {
-        
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-left: 100px;
-        margin-right: 100px;
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 100px;
+    margin-right: 100px;
     ul {
-         li {
-            font-family: a_FuturaRoundDemi;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 20px;
-            line-height: 25px;
-            letter-spacing: 0.1em;
-            color: #FFFFFF;
-            display: inline;
-            list-style-type: none;
-            padding-left: 40px;
-            text-align: center;
-            margin-left: -45px;
-            padding-right: 60px;
-            font-size: 25px;
+      li {
+        font-family: a_FuturaRoundDemi;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 25px;
+        letter-spacing: 0.1em;
+        color: #FFFFFF;
+        display: inline;
+        list-style-type: none;
+        padding-left: 40px;
+        text-align: center;
+        margin-left: -45px;
+        padding-right: 60px;
+        font-size: 25px;
         a {
-            text-decoration: none;
-            margin-top: 15px;
-            letter-spacing: 0.1em;
-            color: rgb(252, 252, 252);}
-            }
+          text-decoration: none;
+          margin-top: 15px;
+          letter-spacing: 0.1em;
+          color: rgb(252, 252, 252);
         }
-   }
-   
+      }
+    }
+  }
 
-   .contacts {
+  .contacts {
     font-family: a_FuturaRoundDemi;
     font-style: normal;
     font-weight: bold;
@@ -40,28 +39,27 @@ header {
     color: #D15742;
     text-align: center;
     .contacts__mode {
-        font-weight: normal;
-        font-size: 18px;
+      font-weight: normal;
+      font-size: 18px;
     }
-   }
-   
+  }
 }
+
 // .bg {
 //     position: relative;
 //     img {
 //     width: 600px;}
 // }
 .main-navigation {
-    background-image: url(./../images/bg-up.png);
-    left: 350px; 
-    padding-bottom: 130px;
-    padding-left: 20px;
-    padding-right: 50px;
-    padding-top: 70px;
-    background-repeat: no-repeat;
-    background-size: contain;
+  background-image: url("/images/bg-up.png");
+  left: 350px;
+  padding-bottom: 130px;
+  padding-left: 20px;
+  padding-right: 50px;
+  padding-top: 70px;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
-
 
 // .wr-header {
 //     height: 100vh;
