--- a/src/styles/sections/team.scss
+++ b/src/styles/sections/team.scss
@@ -1,7 +1,7 @@
 .team {
     margin-bottom: 100px;
     margin-top: 100px;
-    background-image: url(./../images/bg-team.png);
+    background-image: url(/images/bg-team.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -35,7 +35,7 @@
         align-items: center;
         // position: absolute;
         // z-index: 2;
-        
+
 
         .curator {
             display: flex;
@@ -48,7 +48,7 @@
             border-radius: 31px;
             margin-right: 35px;
             margin-top: 150px;
-        
+
             .foto {
                 padding-left: 25%;
             }
@@ -59,7 +59,7 @@
                 font-weight: bold;
                 font-size: 24px;
                 line-height: 28px;
-                color: #E55266; 
+                color: #E55266;
                 text-align: center;
             }
             .function {
@@ -102,7 +102,7 @@
                         background:rgb(20, 131, 131);
                     }
                 }
-            
+
             }
             .fb {
                 margin-left: 45%;
