--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -27,6 +27,9 @@ header {
           letter-spacing: 0.1em;
           color: rgb(252, 252, 252);
         }
+        a:hover {
+          color: #EC5F72;
+        }
       }
     }
   }
